attached_assets/Pasted--The-CXX-compiler-identification-is-GNU-13-2-0-Detecting-CXX-compiler-ABI-info-Detecting-C-1743336121123.txt
-- The CXX compiler identification is GNU 13.2.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /nix/store/9bv7dcvmfcjnmg5mnqwqlq2wxfn8d7yi-gcc-wrapper-13.2.0/bin/g++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done (1.8s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[ 16%] Building CXX object CMakeFiles/ai_language_lib.dir/src/lexer.cpp.o
[ 33%] Building CXX object CMakeFiles/ai_language_lib.dir/src/parser.cpp.o
[ 50%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreter.cpp.o
In file included from /home/runner/workspace/ai_language/src/interpreter.cpp:1:
/home/runner/workspace/ai_language/src/../include/interpreter.h:14:27: error: ‘std::function’ has not been declared
   14 |     void setOutputHandler(std::function<void(const std::string&)> handler);
      |                           ^~~
/home/runner/workspace/ai_language/src/../include/interpreter.h:14:40: error: expected ‘,’ or ‘...’ before ‘<’ token
   14 |     void setOutputHandler(std::function<void(const std::string&)> handler);
      |                                        ^
/home/runner/workspace/ai_language/src/../include/interpreter.h:15:26: error: ‘std::function’ has not been declared
   15 |     void setErrorHandler(std::function<void(const std::string&)> handler);
      |                          ^~~
/home/runner/workspace/ai_language/src/../include/interpreter.h:15:39: error: expected ‘,’ or ‘...’ before ‘<’ token
   15 |     void setErrorHandler(std::function<void(const std::string&)> handler);
      |                                       ^
/home/runner/workspace/ai_language/src/../include/interpreter.h:22:10: error: ‘function’ in namespace ‘std’ does not name a template type
   22 |     std::function<void(const std::string&)> outputHandler;
      |          ^~~~~~~~
/home/runner/workspace/ai_language/src/../include/interpreter.h:4:1: note: ‘std::function’ is defined in header ‘<functional>’; did you forget to ‘#include <functional>’?
    3 | #include "parser.h"
  +++ |+#include <functional>
    4 | #include <string>
/home/runner/workspace/ai_language/src/../include/interpreter.h:23:10: error: ‘function’ in namespace ‘std’ does not name a template type
   23 |     std::function<void(const std::string&)> errorHandler;
      |          ^~~~~~~~
/home/runner/workspace/ai_language/src/../include/interpreter.h:23:5: note: ‘std::function’ is defined in header ‘<functional>’; did you forget to ‘#include <functional>’?
   23 |     std::function<void(const std::string&)> errorHandler;
      |     ^~~
/home/runner/workspace/ai_language/src/interpreter.cpp:38:6: error: variable or field ‘setOutputHandler’ declared void
   38 | void Interpreter::setOutputHandler(std::function<void(const std::string&)> handler) {
      |      ^~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreter.cpp:38:41: error: ‘function’ is not a member of ‘std’
   38 | void Interpreter::setOutputHandler(std::function<void(const std::string&)> handler) {
      |                                         ^~~~~~~~
/home/runner/workspace/ai_language/src/interpreter.cpp:2:1: note: ‘std::function’ is defined in header ‘<functional>’; did you forget to ‘#include <functional>’?
    1 | #include "../include/interpreter.h"
  +++ |+#include <functional>
    2 | #include "../include/lexer.h"
/home/runner/workspace/ai_language/src/interpreter.cpp:38:50: error: expected primary-expression before ‘void’
   38 | void Interpreter::setOutputHandler(std::function<void(const std::string&)> handler) {
      |                                                  ^~~~
/home/runner/workspace/ai_language/src/interpreter.cpp:42:6: error: variable or field ‘setErrorHandler’ declared void
   42 | void Interpreter::setErrorHandler(std::function<void(const std::string&)> handler) {
      |      ^~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreter.cpp:42:40: error: ‘function’ is not a member of ‘std’
   42 | void Interpreter::setErrorHandler(std::function<void(const std::string&)> handler) {
      |                                        ^~~~~~~~
/home/runner/workspace/ai_language/src/interpreter.cpp:42:40: note: ‘std::function’ is defined in header ‘<functional>’; did you forget to ‘#include <functional>’?
/home/runner/workspace/ai_language/src/interpreter.cpp:42:49: error: expected primary-expression before ‘void’
   42 | void Interpreter::setErrorHandler(std::function<void(const std::string&)> handler) {
      |                                                 ^~~~
/home/runner/workspace/ai_language/src/interpreter.cpp: In member function ‘void ai_language::Interpreter::output(const std::string&)’:
/home/runner/workspace/ai_language/src/interpreter.cpp:55:9: error: ‘outputHandler’ was not declared in this scope; did you mean ‘setOutputHandler’?
   55 |     if (outputHandler) {
      |         ^~~~~~~~~~~~~
      |         setOutputHandler
/home/runner/workspace/ai_language/src/interpreter.cpp: In member function ‘void ai_language::Interpreter::reportError(const std::string&)’:
/home/runner/workspace/ai_language/src/interpreter.cpp:64:9: error: ‘errorHandler’ was not declared in this scope; did you mean ‘setErrorHandler’?
   64 |     if (errorHandler) {
      |         ^~~~~~~~~~~~
      |         setErrorHandler
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:104: CMakeFiles/ai_language_lib.dir/src/interpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:86: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
